--- a/retailcrm/views/css/less/styles.less
+++ b/retailcrm/views/css/less/styles.less
@@ -1,7 +1,7 @@
 @import "fonts.less";
 
-@red: #ef5e67;
-@redHover: #ff4c4c;
+@red: #0068FF;
+@redHover: #005add;
 @redActive: darken(@redHover, 10%);
 @gray: #7A7A7A;
 @grayBg: #EAEBEC;
