Added log downloading from settings page. Setup debug mode in settings page. Update sinceId at the end of export

--- a/retailcrm/views/css/less/styles.less
+++ b/retailcrm/views/css/less/styles.less
@@ -488,6 +488,9 @@ body, html {
       &_big {
         font-size: 18px;
       }
+      &_hidden {
+        display: none;
+      }
     }
   }
   &-full-height {
