--- a/retailcrm/views/css/less/styles.less
+++ b/retailcrm/views/css/less/styles.less
@@ -75,8 +75,8 @@ body, html {
     }
   }
   &-video {
-    margin: 57px auto 0;
-    max-width: 442px;
+    margin: 30px auto 0;
+    text-align: center;
     position: relative;
 
     &-trigger {
@@ -147,12 +147,12 @@ body, html {
       font-weight: 600;
       line-height: 24px;
       margin-bottom: 22px;
-      
+
       &_link {
         color: @blue;
         transition: .25s ease;
         float: right;
-  
+
         &:hover {
           color: @blueHover;
         }
