Added Catalog generation tab to settings

--- a/retailcrm/views/css/less/retailcrm-export.less
+++ b/retailcrm/views/css/less/retailcrm-export.less
@@ -9,6 +9,7 @@
       font-size: 18px;
       margin-bottom: 20px;
     }
+    &__content,
     input&__content {
       width: 120px;
       height: 120px;
