Added force mode for jobs

--- a/retailcrm/views/css/less/styles.less
+++ b/retailcrm/views/css/less/styles.less
@@ -616,6 +616,11 @@ body, html {
       max-width: 300px;
       vertical-align: middle;
     }
+    &__row {
+      &-bold {
+        font-weight: bold;
+      }
+    }
     &-no-wrap {
       white-space: nowrap;
     }
@@ -683,6 +688,7 @@ body, html {
       background: #fff;
       border: 1px solid rgba(122,122,122,0.15);
       position: absolute;
+      z-index: 5;
       top: 20px;
       left: 0;
       padding: 18px;
