--- a/retailcrm/views/css/less/retailcrm-orders.less
+++ b/retailcrm/views/css/less/retailcrm-orders.less
@@ -36,6 +36,9 @@
       width: 33%;
       height: 60px;
       margin: 0;
+      padding: 0;
+      display: block;
+      float: left;
       text-align: center;
       font-size: 16px;
       text-shadow: none;
@@ -148,7 +151,7 @@
 
     &.active {
       border-color: #005eeb;
- 
+
       .retail-row__title {
         cursor: initial;
       }
