--- a/retailcrm/views/css/less/styles.less
+++ b/retailcrm/views/css/less/styles.less
@@ -669,6 +669,10 @@ body, html {
     border: none;
     border-radius: 20px;
 
+    &.hidden {
+      display: none;
+    }
+
     thead {
       th {
         background: rgba(122, 122, 122, 0.15);
